document/data.txt
5，21，应该是目前最费时间的一个bug：（8集的中间到9集的
        在后台的app.js里中间件，第一次进login没写return，可能还有其他的小问题，一起导致的
        （  axios.config.js文件没写export default axios抛出给别人用；
            持票人Bearer ${token}写成$(token)；（解决：复看教学视频）    
        ）
        （  401，404，500错误交替反复出现，
            总是说UserController里的send重复使用了，
        ）
        
        好处：之前还一直对引入的地址不自信，需要反复确认，现在好了，对文件位置的把握提高了
                理解了JWT.js文件中generate和verify的使用
                学会了开发者工具的使用：1控制台，2网络，3应用程序，4在页面中选择一个元素查看（前面已经学会了几个1，3，4）
                理解了更多关于vscode终端的用法

        前端的post接后端的post，get接get
        教学视频在写文件名时直接用了自动添加连接
       
        adminapi写成admiknapi还找不到所有写了admiknapi的地方 （解决：用clt+F点开每个文件）
        前端：vue.config.js        main.js      
        后端：app.js        www.js
    
    2--现象：刷新页面没刷新新的token 
            （原因：代码：app.js   res.header("Authorization",newToken)  //逗号写成了点
                    url误写了一个=，应该是三个===
                    split(" ")[1]里面没写空格
             ）但是改了上面这些反而黑屏报错了
            （解决：Home.vue里写的去home页面axios.get("/adminapi/user/home").then(res=>{ console.log(res.data)})
                    但是UserRouter文件里"/adminapi/user/login"，改了就好了
             ）


5，22， 
    1--现象，UserController中返回数据给前端时写死了头像，但是还是显示未设置头像的图片
            （原因：const avatarUrl = computed(()=>store.state.userInfo.avatarUrl ? store.state.userInfo.avatarUrl : "https://")
                    里面写成了avatarUrl，应该时avatar的
                    /* // ✅ 正确：添加安全判断
                    const uploadAvatar = computed(() => {
                        if (!userForm.avatar) return ''
                        if (userForm.avatar.includes("blob")) return userForm.avatar
                        return 'http://localhost:3000' + userForm.avatar
                    }) */deepseek给的无用代码


    2--现象，写center页面表单的时候，userFormRef是暗的，center黑屏了，说username、introduction is not defined
            （解决：center.vue 里把store写法改成了computed写法。并给每一个赋了值，userFormRef是暗的没解决了，好像没出错

                    /* const userForm = computed(()=>{         //computed(()=>{})才是正确用法
                        return {
                            username: store.state.userInfo?.username || "",
                            gender: store.state.userInfo?.gender ?? 0,
                            introduction: store.state.userInfo?.introduction || "",
                            avatar: store.state.userInfo?.avatar || ""
                        }
                    }) */deepseek给的无用代码               
    3--现象，center的用户名没有自动填充
            （解决：从username:""，,改成username: store.state.userInfo?.username || "",）


    4--现象，好像token不能过期


5，23，
    1--现象，center的表单输入时写了只能在失去焦点时改变输入框里的东西，改了trigger: 'blur'也没用，而且一次只能改一个字
            （解决：改回了store写法，username、introduction is not defined什么的错误没出现
                    昨天的3--现象又改回username:""，也没出错了）

                    
5,26,
    视频给的错误，因为设定了file：null，在校验时其他的都能通过，但是file通不过，于是提示没找到file：
        D:\node+vue\node+vue\server\controllers\admin\UserController.js:42
            const avatar = `/avataruploads/${req.file.filename}`
                                                    ^
        TypeError: Cannot read properties of undefined (reading 'filename')
            （解决：在UserController.js 中把const avatar =`/avataruploads/${req.file.filename}`
                    改成const avatar = req.file ? `/avataruploads/${req.file.filename}`: ""，加了一个判断，
                    并且在UserController和UserService里加判断avatar是否存在，存在就返回，不存在就不返回

                    但是改了之后反而有了更多不明所以的报错：
                    1，gender不是Number；
                        D:\node+vue\node+vue\server\node_modules\mongoose\lib\schema\number.js:412
                            throw new CastError('Number', val, this.path, err, this);
                                ^
                        CastError: Cast to Number failed for value "NaN" (type number) at path "gender"
                    2，D:\node+vue\node+vue\server\controllers\admin\UserController.js:43
                                if(token)
                                ^^
                        SyntaxError: Unexpected token 'if'
                    3，D:\node+vue\node+vue\server\controllers\admin\UserController.js:73
                        module.exports = UserController
                        ^^^^^^
                         SyntaxError: Unexpected identifier 'module'


                    （解决：不算是解决方法吧，这个不能稳定复现，我也不知道是什么原理
                            把UserService里的upload里的gender改成了gender:Number(gender)
                            把Center里deepseek给的uploadAvatar的if选择去掉，依然用的computed三元规则
                    问题还是存在，但是范围小了一点，原来是每一项提交都会报错，现在只有
                        又是gender undefined

5,27,   昨天的报错，只要刷新后第一次改的没有性别，就会报错，第一次点了性别之后再怎么改都不会出错

        解决了，把UserController里登录时的gender写错了，写成了gender：result[0].gender ? result[0] : 0,
        现在改成了gender:result[0].gender ?? 0,就好了

    1，现象，在封装了center里的很多后，应该是file的处理不当，导致Upload  Cannot read properties of undefined (reading 'raw')
            （原因，components/upload/Upload里的emit("eventchange",file.raw)写成emit("eventchange".file.raw)了）

    2,现象，不知道算不算bug，在我刚复制好框架代码，就有数据填充，是管理员信息，但是在ueradd里说明的role选择框的默认是2却保留了
            （解决：damn，那个填充是浏览器给我填的密码



6，14，   

6,18,  把upload.js里的axios原本引入的原生axios改成配置好的axios


6,20    1,小问题，超快解决：ERROR in ./src/views/news-manage/NewsList.vue?vue&type=script&setup=true&lang=js (./node_modules/babel-loader/lib/index.js??clonedRuleSet-40.use[0]!./node_modules/vue-loader/dist/index.js??ruleSet[0].use[0]!./src/views/news-manage/NewsList.vue?vue&type=script&setup=true&lang=js)
        Module Error (from ./node_modules/vue-loader/dist/index.js):
        [vue/compiler-sfc] Unexpected token (5:24)

        D:\node+vue\node+vue\admin\src\views\news-manage\NewsList.vue
        74 |  import axios from '@/util/axios.config'
        75 |  import formatTime from '@/util/formatTime'
        76 |  import {useRouter} from `vue-router`
        |                          ^
        77 |  
        78 |  const router = useRouter()
        解决：`vue-router`把反引号改回引号


        2,NewsEdit中的内容:content="newsForm.content"本来写了：的，不知道什么时候删掉了：


6,21,    1,WebSocketClient.js:49 WebSocket connection to 'ws://192.168.179.177:8080/ws' failed: 
        不知道是不是昨天不小心把什么改成了手动。好像是因为前端找不到后端，所以要先打开后端再开启前端

        2,upload.js:11  POST http://localhost:8080/adminapi/products/add 404 (Not Found)
        前端地地址写错了。多写了一个s
        index.js??clonedRuleSet-40.use[0]!./node_modules/vue-loader/dist/index.js??ruleSet[0].use[0]!./src/views/product-manage/ProductAdd.vue?vue&type=script&setup=true&lang=js:69 Uncaught (in promise) ReferenceError: router is not defined
        在ProuductAdd里使用了router但是没定义

            
        3,GET http://localhost:8080/localhost:3000/Productuploads/68d24445c46d512d4ff6d0daeb990320 404 (Not Found)
        首页的轮播，图片位置拼接错误，少写了//     backgroundImage:`url(http://localhost:3000${item.cover})`,

        
        4,在写web的news时，说searchnewslist未定义，
        computed的写法问题

6，22，  1，在news里的分1，2，3组的里面有一个没用的点击事件@tab-click="handleClick"，也没有定义，因此报很多无关紧要的错误
        2，搜索栏里面，因为popover特殊，导致触摸的等级比点击低而不能触发，所以我把click改成了mousedown，比click更早触发，对触摸屏也有效




6,29,    1,滚动条的问题解决了，原因是mainbox里的calc写成了cacl
         2,token过期后显示的报错覆盖了项目，看起来像是一个很大的 错误，但其实token过期本来就是一个正常的设定，
                解决：在vue-config中关闭了遮罩。

         3,添加了一个页面，在token失效后跳转到这个页面，里面提示token失效了，有一个按钮，按下跳转登录页面，一直跳不过去，直接到登录页面
                解决：在路由守卫里添加白名单，如果是跳转到token失效页面直接放行。
